--- a/Report/project.bib
+++ b/Report/project.bib
@@ -294,22 +294,23 @@
   howpublished = "https://github.com/metagol/metagol",
   URL = "https://github.com/metagol/metagol"
 }
-@article{MarkLaw/ILASP2,
+@article{MarkLaw/ILASP2i,
   author    = {Mark Law and
                Alessandra Russo and
                Krysia Broda},
-  title     = {Learning weak constraints in answer set programming},
+  title     = {Iterative Learning of Answer Set Programs from Context Dependent Examples},
   journal   = {Theory Pract. Log. Program.},
-  volume    = {15},
-  number    = {4-5},
-  pages     = {511--525},
-  year      = {2015},
-  url       = {https://doi.org/10.1017/S1471068415000198},
-  doi       = {10.1017/S1471068415000198},
-  timestamp = {Thu, 13 Feb 2020 14:39:46 +0100},
-  biburl    = {https://dblp.org/rec/journals/tplp/LawRB15.bib},
+  volume    = {16},
+  number    = {5-6},
+  pages     = {834--848},
+  year      = {2016},
+  url       = {https://doi.org/10.1017/S1471068416000351},
+  doi       = {10.1017/S1471068416000351},
+  timestamp = {Thu, 13 Feb 2020 14:39:31 +0100},
+  biburl    = {https://dblp.org/rec/journals/tplp/LawRB16.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
 @phdthesis{MarkLaw/Thesis,
   author    = {Mark Law},
   title     = {Inductive learning of answer set programs},
@@ -390,4 +391,26 @@ volume = {39},
 journal = {Mathematical Spectrum}
 }
 
-
+@article{Clingo,
+  author    = {Martin Gebser and
+               Roland Kaminski and
+               Benjamin Kaufmann and
+               Patrick L{\"{u}}hne and
+               Philipp Obermeier and
+               Max Ostrowski and
+               Javier Romero and
+               Torsten Schaub and
+               Sebastian Schellhorn and
+               Philipp Wanko},
+  title     = {The Potsdam Answer Set Solving Collection 5.0},
+  journal   = {{KI}},
+  volume    = {32},
+  number    = {2-3},
+  pages     = {181--182},
+  year      = {2018},
+  url       = {https://doi.org/10.1007/s13218-018-0528-x},
+  doi       = {10.1007/s13218-018-0528-x},
+  timestamp = {Thu, 13 Sep 2018 18:11:33 +0200},
+  biburl    = {https://dblp.org/rec/journals/ki/GebserKKLOORSSW18.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
