--- a/Report/project.tex
+++ b/Report/project.tex
@@ -240,6 +240,9 @@ h(B,H) :-
     H is D + (2*N).
 \end{minted}
 
+
+
+\input{06-results.tex}
 \section{Noughts and crosses}
 \chapter{Experiments}\label{sec:experiments}
 \section{Optimal Play vs Random with fixed sample size}
